# Ka-Ching

./: .env.example  .gitignore  README.md  compose.yaml
backend/: Containerfile  entrypoint.sh  pyproject.toml
backend/accounting/: admin.py  api.py  models.py  schemas.py  services.py
backend/accounting/management/commands/: init_nginx_conf.py
backend/accounting/migrations/: 0001_initial.py  0002_systemsetting.py
backend/core/: settings.py  urls.py
docs/: README.zh-TW.md
nginx/: entrypoint.sh
tunnel/: entrypoint.sh
