[project]
name = "backend"
version = "0.1.0"
description = "Ka-Ching Backend Service"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0",
  "django-cors-headers>=4.9.0",
  "django-ninja>=1.5.1",
  "gunicorn>=23.0.0",
  "psycopg[binary]>=3.3.2",
  "requests>=2.32.5",
  "weasyprint>=67.0",
]
